crates/mabo-parser/tests/inputs/invalid/field_name.mabo
struct Sample {
    1value: u32 @1,
}
